--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "websocket-server",
+  "name": "server-template",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/app.js",
   "scripts": {
     "start": "nodemon src/app.ts",
     "build": "tsc"
